kubernetes/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlflow-dashboard
  template:
    metadata:
      labels:
        app: mlflow-dashboard
    spec:
      containers:
        - env:
            - name: PORT
              value: "8080"
          image: jedha/sample-mlflow-server
          name: mlflow-server
          ports:
            - containerPort: 8080
