kubernetes/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
  selector:
    app: mlflow-dashboard
  type: ClusterIP
