kubernetes/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
spec:
  rules:
    - host: mlflow.192.168.64.17.nip.io
      http:
        paths:
          - backend:
              service:
                name: mlflow-service
                port:
                  number: 80
            path: /
            pathType: Prefix
